Inclusion Dialog Fragment Class SetUp Done

--- a/app/src/main/res/layout/fragment_inclusion_plans.xml
+++ b/app/src/main/res/layout/fragment_inclusion_plans.xml
@@ -174,13 +174,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        app:layout_constraintGuide_percent="0.26"/>
+                        app:layout_constraintGuide_percent="0.25"/>
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guide3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        app:layout_constraintGuide_percent="0.45"/>
+                        app:layout_constraintGuide_percent="0.44"/>
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guide4"
                         android:layout_width="wrap_content"
@@ -239,7 +239,7 @@
 
                     <TextView
                         android:id="@+id/text5"
-                        android:layout_width="0dp"
+                        android:layout_width="110dp"
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
                         android:text="Charge Rule"
@@ -257,6 +257,18 @@
                         android:text="Created By"
                         android:layout_marginStart="5dp"
                         app:layout_constraintStart_toEndOf="@id/text5"
+                        app:layout_constraintEnd_toStartOf="@id/text7"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/text7"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="Last Modified"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintStart_toEndOf="@id/text6"
                         app:layout_constraintEnd_toStartOf="@id/guide4"
                         app:layout_constraintBottom_toBottomOf="@id/shortCode"
                         app:layout_constraintTop_toTopOf="@id/shortCode"/>
