--- a/app/src/main/res/layout/dialog_create_amenities.xml
+++ b/app/src/main/res/layout/dialog_create_amenities.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="@dimen/createDialogWidth"
+    android:layout_height="@dimen/createDialogHeight"
     style="@style/CardViewTheme"
+    android:layout_gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="50dp"
     app:cardCornerRadius="20dp"
     app:cardElevation="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="@dimen/createDialogWidth"
+        android:layout_height="@dimen/createDialogHeight">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/aA"
@@ -41,14 +41,14 @@
             android:weightSum="3"
             android:gravity="center_vertical"
             android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="20dp"
             android:paddingVertical="10dp"
             app:layout_constraintTop_toBottomOf="@id/aA">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/amenityNameLayout"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/textInputLayoutHeight"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:hint="Amenity Name"
                 android:layout_weight="1"
@@ -78,7 +78,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/shortCodeLayout"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/textInputLayoutHeight"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:hint="Short Code"
                 android:layout_weight="1"
@@ -106,7 +106,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/amenityTypeLayout"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/textInputLayoutHeight"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:hint="Amenity Type"
                 android:layout_weight="1"
@@ -191,7 +191,8 @@
             android:id="@+id/amenitiesIconRecycler"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="30dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginHorizontal="30dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="10"
             tools:listitem="@layout/item_icon"
