--- a/app/src/main/res/layout/fragment_amenities.xml
+++ b/app/src/main/res/layout/fragment_amenities.xml
@@ -174,7 +174,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        app:layout_constraintGuide_percent="0.35"/>
+                        app:layout_constraintGuide_percent="0.31"/>
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guide3"
                         android:layout_width="wrap_content"
@@ -187,85 +187,90 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         app:layout_constraintGuide_percent="0.87"/>
-                    <CheckBox
-                        android:id="@+id/switch_all"
-                        android:layout_width="19dp"
-                        android:layout_height="19dp"
-                        app:layout_constraintEnd_toStartOf="@id/shortCode"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"/>
 
 
                     <TextView
                         android:id="@+id/shortCode"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/listTextHeading"
-                        android:layout_marginStart="10dp"
+                        style="@style/listText"
                         android:text="Short Code"
-                        app:layout_constraintEnd_toStartOf="@id/propertyName"
+                        app:layout_constraintEnd_toStartOf="@id/text2"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/switch_all"/>
+                        app:layout_constraintStart_toStartOf="parent"/>
 
                     <TextView
-                        android:id="@+id/propertyName"
+                        android:id="@+id/text2"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/listTextHeading"
-                        android:text="Inclusion name"
+                        style="@style/listText"
+                        android:text="Amenity Name"
+                        app:layout_constraintEnd_toEndOf="@id/guide2"
                         app:layout_constraintStart_toStartOf="@id/guide1"
                         app:layout_constraintBottom_toBottomOf="@id/shortCode"
                         app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
 
                     <TextView
-                        android:id="@+id/bedType"
+                        android:id="@+id/text3"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/listTextHeading"
+                        style="@style/listText"
                         android:text="Amenity Type"
                         android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/text4"
                         app:layout_constraintStart_toStartOf="@id/guide2"
                         app:layout_constraintBottom_toBottomOf="@id/shortCode"
                         app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
                     <TextView
-                        android:id="@+id/adultChild"
+                        android:id="@+id/text4"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/listTextHeading"
-                        android:text="Used In"
+                        style="@style/listText"
+                        android:visibility="gone"
+                        android:text="End Date"
                         android:layout_marginStart="5dp"
-                        app:layout_constraintEnd_toStartOf="@id/lastModified"
+                        app:layout_constraintStart_toEndOf="@id/text3"
+                        app:layout_constraintEnd_toStartOf="@id/guide3"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/text5"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listText"
+                        android:text="Created By"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/text6"
                         app:layout_constraintStart_toStartOf="@id/guide3"
                         app:layout_constraintBottom_toBottomOf="@id/shortCode"
                         app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
                     <TextView
-                        android:id="@+id/lastModified"
+                        android:id="@+id/text6"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/listTextHeading"
-                        android:text="Created By"
+                        style="@style/listText"
+                        android:text="Last Modified"
                         android:layout_marginStart="5dp"
-                        app:layout_constraintStart_toEndOf="@id/adultChild"
+                        app:layout_constraintStart_toEndOf="@id/text5"
                         app:layout_constraintEnd_toStartOf="@id/actions"
                         app:layout_constraintBottom_toBottomOf="@id/shortCode"
                         app:layout_constraintTop_toTopOf="@id/shortCode"/>
-
 
                     <TextView
                         android:id="@+id/actions"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/listTextHeading"
+                        android:gravity="center"
+                        style="@style/listText"
                         android:text="Actions"
-                        android:textAlignment="center"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="@id/guide4"
+                        app:layout_constraintStart_toEndOf="@id/guide4"
                         app:layout_constraintBottom_toBottomOf="@id/shortCode"
                         app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
@@ -275,13 +280,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/grey5"
-                    app:layout_constraintTop_toBottomOf="@id/propertyName"/>
+                    app:layout_constraintTop_toBottomOf="@id/items_linear"/>
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/paymentTypeRecycler"
+                    android:id="@+id/recyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:listitem="@layout/item_payment_type"/>
+                    tools:listitem="@layout/item_holidays"/>
 
             </LinearLayout>
 
