--- a/app/src/main/res/layout/item_room_type_category.xml
+++ b/app/src/main/res/layout/item_room_type_category.xml
@@ -63,6 +63,7 @@
             app:layout_constraintBottom_toBottomOf="parent">
 
             <TextView
+                android:id="@+id/ratePlanPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
