--- a/app/src/main/res/layout/fragment_room_type.xml
+++ b/app/src/main/res/layout/fragment_room_type.xml
@@ -113,6 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:layout_marginStart="10dp"
                 android:gravity="center_vertical">
 
@@ -261,6 +262,7 @@
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
                         android:text="Actions"
+                        android:textAlignment="center"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/amenities"
