AddAmenitiesAdapter and AddAmenitiesDialog implemented in AddRoomTypeFragment

--- a/app/src/main/res/layout/dialog_add_amenities.xml
+++ b/app/src/main/res/layout/dialog_add_amenities.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="@dimen/createDialogWidth"
+    android:layout_height="@dimen/createDialogHeight"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/CardViewTheme"
-    android:layout_margin="50dp"
+    android:layout_gravity="center"
     app:cardCornerRadius="20dp"
     app:cardElevation="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="@dimen/createDialogWidth"
+        android:layout_height="@dimen/createDialogHeight">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/aA"
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_vertical"
-            app:layout_constraintHorizontal_bias="0.05"
+            app:layout_constraintHorizontal_bias="0.04"
             app:layout_constraintTop_toTopOf="@id/searchCard"
             app:layout_constraintEnd_toStartOf="@id/createNewAmenityBtn"
             app:layout_constraintBottom_toBottomOf="@id/searchCard"
@@ -93,6 +93,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
