--- a/app/src/main/res/layout/fragment_add_property.xml
+++ b/app/src/main/res/layout/fragment_add_property.xml
@@ -143,7 +143,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/propertyProfileLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/corner_bottom_white_background"
@@ -537,7 +537,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/addressLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:visibility="gone"
                     android:paddingBottom="12dp"
                     android:layout_marginBottom="20dp"
@@ -786,6 +786,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:textSize="@dimen/H5"
+                                android:maxLength="12"
                                 android:fontFamily="@font/roboto"
                                 android:inputType="number"
                                 android:textColor="@color/secondary"
