--- a/app/src/main/res/layout/fragment_view_properties.xml
+++ b/app/src/main/res/layout/fragment_view_properties.xml
@@ -111,6 +111,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -254,6 +255,7 @@
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
                         android:text="Occupancy"
+                        android:visibility="gone"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/totalRooms"
                         app:layout_constraintStart_toEndOf="@id/location"
@@ -337,6 +339,7 @@
             android:layout_marginVertical="20dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp"
+            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/llView"
             app:layout_constraintTop_toBottomOf="@id/searchCard"
@@ -370,6 +373,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Hotels"
+                    android:visibility="gone"
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/roboto_medium"
                     android:textColor="@color/secondary"
@@ -379,6 +383,7 @@
                     android:id="@+id/hotelsRecycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_marginTop="15dp"
                     android:foregroundGravity="center"
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
@@ -389,6 +394,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Resorts"
+                    android:visibility="gone"
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/roboto_medium"
                     android:textColor="@color/secondary"
@@ -398,6 +404,7 @@
                     android:id="@+id/resortsRecycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_marginTop="15dp"
                     android:foregroundGravity="center"
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
