--- a/app/src/main/res/layout/item_properties.xml
+++ b/app/src/main/res/layout/item_properties.xml
@@ -65,10 +65,12 @@
                 app:layout_constraintBottom_toBottomOf="@id/location">
 
                 <TextView
+                    android:id="@+id/ratingTxt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/secondary"
                     android:text="5"
+                    android:maxLength="2"
                     android:textSize="@dimen/H6"
                     android:fontFamily="@font/roboto_medium"
                     android:background="@color/white"/>
