--- a/app/src/main/res/layout/item_roomplan_price.xml
+++ b/app/src/main/res/layout/item_roomplan_price.xml
@@ -19,7 +19,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/txt_room"
+            android:id="@+id/meal_Plan"
             style="@style/subHeadingTextBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:layout_constraintStart_toEndOf="@id/txt_room"
+            app:layout_constraintStart_toEndOf="@id/meal_Plan"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/svg_arrow_down"
@@ -126,8 +126,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/c2">
             <TextView
-
                 style="@style/rateText"
+                android:id="@+id/ratePrice_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -149,7 +149,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/c3">
             <TextView
-
+                android:id="@+id/ratePrice_2"
                 style="@style/rateText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -173,7 +173,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/c4">
             <TextView
-
+                android:id="@+id/ratePrice_3"
                 style="@style/rateText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -198,7 +198,7 @@
             app:layout_constraintEnd_toStartOf="@id/c5">
 
             <TextView
-
+                android:id="@+id/ratePrice_4"
                 style="@style/rateText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -221,7 +221,7 @@
             app:layout_constraintEnd_toStartOf="@id/c6">
 
             <TextView
-
+                android:id="@+id/ratePrice_5"
                 style="@style/rateText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -243,7 +243,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/c7">
             <TextView
-
+                android:id="@+id/ratePrice_6"
                 style="@style/rateText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -267,7 +267,7 @@
             app:layout_constraintEnd_toStartOf="@id/c8">
 
             <TextView
-
+                android:id="@+id/ratePrice_7"
                 style="@style/rateText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -290,7 +290,7 @@
             app:layout_constraintEnd_toStartOf="@id/c9">
 
             <TextView
-
+                android:id="@+id/ratePrice_8"
                 style="@style/rateText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -312,7 +312,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/c100">
             <TextView
-
+                android:id="@+id/ratePrice_9"
                 style="@style/rateText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -334,7 +334,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
             <TextView
-
+                android:id="@+id/ratePrice_10"
                 style="@style/rateText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
