--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
         <dimen name="dialog_width">500dp</dimen>
         <dimen name="dialog_height">500dp</dimen>
 
-
+    <dimen name="strokewidth">0.5dp</dimen>
 
 
     <dimen name="nav_cards_height">50dp</dimen>
