--- a/app/src/main/res/layout/fragment_add_property.xml
+++ b/app/src/main/res/layout/fragment_add_property.xml
@@ -824,6 +824,7 @@
                             style="@style/TextInputLayoutStyle"
                             android:layout_width="0dp"
                             android:layout_height="@dimen/textInputLayoutHeight"
+                            android:visibility="gone"
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="10dp"
                             android:hint="Website"
