--- a/app/src/main/res/layout/item_ota_price.xml
+++ b/app/src/main/res/layout/item_ota_price.xml
@@ -130,7 +130,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/c2">
                 <TextView
-
+                    android:id="@+id/otaPrice_1"
                     style="@style/otaRates"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -151,7 +151,7 @@
                 android:backgroundTint="@color/primaryBackground"                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/c3">
                 <TextView
-
+                    android:id="@+id/otaPrice_2"
                     style="@style/otaRates"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -173,7 +173,7 @@
                 android:backgroundTint="@color/primaryBackground"                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/c4">
                 <TextView
-
+                    android:id="@+id/otaPrice_3"
                     style="@style/otaRates"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -196,7 +196,7 @@
                 app:layout_constraintEnd_toStartOf="@id/c5">
 
                 <TextView
-
+                    android:id="@+id/otaPrice_4"
                     style="@style/otaRates"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -218,7 +218,7 @@
                 app:layout_constraintEnd_toStartOf="@id/c6">
 
                 <TextView
-
+                    android:id="@+id/otaPrice_5"
                     style="@style/otaRates"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -239,7 +239,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/c7">
                 <TextView
-
+                    android:id="@+id/otaPrice_6"
                     style="@style/otaRates"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -262,7 +262,7 @@
                 app:layout_constraintEnd_toStartOf="@id/c8">
 
                 <TextView
-
+                    android:id="@+id/otaPrice_7"
                     style="@style/otaRates"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -284,7 +284,7 @@
                 app:layout_constraintEnd_toStartOf="@id/c9">
 
                 <TextView
-
+                    android:id="@+id/otaPrice_8"
                     style="@style/otaRates"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -305,7 +305,7 @@
                 android:backgroundTint="@color/primaryBackground"                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/c100">
                 <TextView
-
+                    android:id="@+id/otaPrice_9"
                     style="@style/otaRates"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -326,7 +326,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
                 <TextView
-
+                    android:id="@+id/otaPrice_10"
                     style="@style/otaRates"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
