--- a/app/src/main/res/layout/item_roomplan_price.xml
+++ b/app/src/main/res/layout/item_roomplan_price.xml
@@ -18,30 +18,46 @@
         android:background="@color/primaryBackground"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/meal_Plan"
-            style="@style/subHeadingTextBold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cardView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:strokeWidth="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_gravity="center"
+            android:backgroundTint="@color/primaryBackground"
             android:layout_marginStart="5dp"
-            android:paddingStart="8dp"
-            android:text="Room+Breakfast" />
+            app:layout_constraintStart_toEndOf="@+id/c1"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/dropDown"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:layout_constraintStart_toEndOf="@id/meal_Plan"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/svg_arrow_down"
-            android:layout_marginStart="25dp"
-            />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/meal_Plan"
+                    style="@style/subHeadingTextPriceBold"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:maxLines="1"
+                    android:layout_weight="1"
+                    android:layout_marginStart="8dp"
+                    android:text="Room+Breakfast" />
+
+                <ImageView
+                    android:id="@+id/dropDown"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:src="@drawable/svg_arrow_down" />
+
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+
 
 
         <androidx.constraintlayout.widget.Guideline
