--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -108,6 +108,12 @@
         <item name="android:textSize">@dimen/H5</item>
     </style>
 
+    <style name="subHeadingTextPriceBold" parent="android:Widget.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:textSize">@dimen/H5</item>
+    </style>
+
     //OtaName
     <style name="otaNameText" parent="android:Widget.TextView">
         <item name="android:textColor">@color/black</item>
