--- a/app/src/main/res/layout/dialog_create_season.xml
+++ b/app/src/main/res/layout/dialog_create_season.xml
@@ -40,33 +40,9 @@
                     android:textColor="@color/secondary"
                     android:textSize="@dimen/H2"/>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/TextInputLayoutStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:hint="Short Code"
-                    app:endIconMode="clear_text"
-                    app:endIconTint="@color/black"
-                    app:layout_constraintEnd_toStartOf="@id/cardImg"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/shortCodeText"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fontFamily="@font/roboto"
-                        android:hint="Awaiting Payment"
-                        android:inputType="text"
-                        android:textColor="@color/secondary"
-                        android:textColorHint="@drawable/hint_selector" />
-
-                </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/propertyChainLayout"
+                    android:id="@+id/seasonLayout"
                     style="@style/TextInputLayoutStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -81,6 +57,31 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/seasonText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/roboto"
+                        android:hint="Awaiting Payment"
+                        android:inputType="text"
+                        android:textColor="@color/secondary"
+                        android:textColorHint="@drawable/hint_selector" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/short_code_layout_season"
+                    style="@style/TextInputLayoutStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:hint="Short Code"
+                    app:endIconMode="clear_text"
+                    app:endIconTint="@color/black"
+                    app:layout_constraintEnd_toStartOf="@id/cardImg"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/shortCodeText"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/roboto"
@@ -140,7 +141,7 @@
                                 android:textColor="@color/secondary"/>
 
                             <TextView
-                                android:id="@+id/from_date"
+                                android:id="@+id/from_date_season"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="--/--/----"
@@ -159,7 +160,7 @@
                                 android:textColor="@color/secondary"/>
 
                             <TextView
-                                android:id="@+id/to_date"
+                                android:id="@+id/to_date_season"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="--/--/----"
