--- a/app/src/main/res/layout/fragment_business_sources.xml
+++ b/app/src/main/res/layout/fragment_business_sources.xml
@@ -89,6 +89,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:orientation="horizontal"
                 android:gravity="center_vertical">
 
@@ -114,6 +115,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginStart="10dp"
+                android:visibility="gone"
                 android:gravity="center_vertical">
 
                 <TextView
