--- a/app/src/main/res/layout/fragment_identity_documents.xml
+++ b/app/src/main/res/layout/fragment_identity_documents.xml
@@ -90,6 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:gravity="center_vertical">
 
                 <TextView
@@ -112,6 +113,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:orientation="horizontal"
                 android:layout_marginStart="10dp"
                 android:gravity="center_vertical">
