--- a/app/src/main/res/layout/fragment_reservation_type.xml
+++ b/app/src/main/res/layout/fragment_reservation_type.xml
@@ -113,6 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:layout_marginStart="10dp"
                 android:gravity="center_vertical">
 
