--- a/app/src/main/res/layout/fragment_payment_types.xml
+++ b/app/src/main/res/layout/fragment_payment_types.xml
@@ -76,7 +76,7 @@
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
-            android:id="@+id/ll5"
+            android:id="@+id/filter_payment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
